force-app/main/default/objects/VIP_Info__c/VIP_Info__c.object-meta.xml
<CustomObject>
    <label>VIP Info</label>
    <nameField>
        <displayFormat>VI-{00000000}</displayFormat>
        <label>VIP Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>