force-app/main/default/objects/VIP_Info__c/fields/Drinks__c.field-meta.xml
<CustomField>
    <fullName>Drinks__c</fullName>
    <label>Drinks</label>
    <type>TextArea</type>
</CustomField>