force-app/main/default/objects/VIP_Info__c/fields/PAX_Name__c.field-meta.xml
<CustomField>
    <fullName>PAX_Name__c</fullName>
    <label>PAX Name</label>
    <type>TextArea</type>
</CustomField>