force-app/main/default/objects/VIP_Info__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <label>Seat Number</label>
    <type>TextArea</type>
</CustomField>