force-app/main/default/objects/VIP_Info__c/fields/Service_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Details__c</fullName>
    <label>Service Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>